--- a/journal-generator/index.html
+++ b/journal-generator/index.html
@@ -1507,7 +1507,7 @@
                 </div>
                 <div style="color:#666; line-height: 1.2rem;margin-block-start: 0.5rem;">
                     <svg style="width:1rem;transform:translateY(2px)" viewBox="0 0 24 24"><path fill="currentColor" d="M12,2L1,21H23M12,6L19.53,19H4.47M11,10V14H13V10M11,16V18H13V16" /></svg>
-                    Not all paper is exactly 8.5in width, so this could vary if the cover is using different paper!
+                    Not all paper is exactly 8.5in width, so this could vary if the cover or inner is using different paper!
                 </div>
                 <div style="display: flex; gap: 1rem; padding-top: 0.75rem;margin-top:0.75rem;border-top: 2px solid #999;">
                     <label for="innerOffset" style="white-space: pre;">Inner Offset</label>
