--- a/journal-generator/index.html
+++ b/journal-generator/index.html
@@ -1338,40 +1338,40 @@
                 type: templateType.cover
             },
             {
-                label: 'Grid Dice',
+                label: '1/4" Grid Dice',
                 value: 'covers/cover-grid-dice.png',
                 type: templateType.cover
             },
             {
-                label: 'Grid Fallout Survival Guide',
+                label: '1/4" Grid Fallout Survival Guide',
                 value: 'covers/cover-grid-survival-guide.png',
                 type: templateType.cover
             },
             {
-                label: 'Grid Elder Scrolls',
+                label: '1/4" Grid Elder Scrolls',
                 value: 'covers/cover-grid-elder-scrolls.png',
                 type: templateType.cover
             },
             {
-                label: 'Basic - Blank',
+                label: '1/4" Basic - Blank',
                 value: 'details/details-basic-blank.png',
                 type: templateType.detail,
                 gridType: templateGridType.inch
             },
             {
-                label: 'Basic - Dots',
+                label: '1/4" Basic - Dots',
                 value: 'details/details-basic-dot.png',
                 type: templateType.detail,
                 gridType: templateGridType.inch
             },
             {
-                label: 'Basic - Grid',
+                label: '1/4" Basic - Grid',
                 value: 'details/details-basic-grid.png',
                 type: templateType.detail,
                 gridType: templateGridType.inch
             },
             {
-                label: 'Basic - Isometric',
+                label: '1/4" Basic - Isometric',
                 value: 'details/details-basic-iso.png',
                 type: templateType.detail,
                 gridType: templateGridType.inch
